2011-02-02  Martin Robinson  <mrobinson@igalia.com>

        Skip another test that uses modal dialogs.

        * platform/gtk/Skipped: Skip modal dialog test and update bug in the skipped list.

2011-02-02  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Removed some custom Chromium test expectations.

        * platform/chromium/test_expectations.txt:

2011-02-02  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        IndexedDB: Implement support for cursor updates
        https://bugs.webkit.org/show_bug.cgi?id=53421

        Layout test for cursor updates.

        * storage/indexeddb/cursor-update-expected.txt: Added.
        * storage/indexeddb/cursor-update.html: Added.

2011-02-01  James Robinson  <jamesr@chromium.org>

        Reviewed by Adam Barth.

        [v8] Increase V8 native->js recursion limit to match document.write() recursion limit
        https://bugs.webkit.org/show_bug.cgi?id=53566

        Unskip test that we now pass.

        * platform/chromium/test_expectations.txt:

2011-02-01  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, expectations change.

        fast/css/box-shadow.html was removed in r77101 but there was
        still a reference to it in the expectations file.

        * platform/chromium/test_expectations.txt:

2011-02-01  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by James Robinson.

        Async event handlers should not fire within a modal dialog
        https://bugs.webkit.org/show_bug.cgi?id=53202
        
        Add tests for a scroll event triggered right before a modal dialog is
        shown.

        * fast/events/scroll-event-during-modal-dialog-expected.txt: Added.
        * fast/events/scroll-event-during-modal-dialog.html: Added.

2011-02-01  Kent Tamura  <tkent@chromium.org>

        Reviewed by Tony Chang.

        [Chromium] Roll Chromium revision for the WebKitWeightWatcher change
        https://bugs.webkit.org/show_bug.cgi?id=53563
